Closed
Bug 191749
Opened 23 years ago
Closed 23 years ago
bad define inside nsAFlatString.h
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dfiguero, Assigned: jag+mozilla)
Details
Attachments
(1 file)
|
503 bytes,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
dbaron
:
approval1.3+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20021003
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20021003
I'm no C expert so I apologize if this is not an actual error but I believe
inside the /mozilla/string/public/nsAFlatString.h file there is a typo. It reads:
#ifndef nsASingleFragmenttring_h___
#include "nsASingleFragmentString.h"
#endif
and it should probably read
#ifndef nsASingleFragmentString_h___
^
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Comment 1•23 years ago
|
||
confirmed; why do we have that #ifndef anyway? nsASingleFragmentString.h has
standard header guard defines in it....
Compilation speed.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•23 years ago
|
||
Updated•23 years ago
|
Attachment #113457 -
Flags: superreview+
Attachment #113457 -
Flags: review+
| Assignee | ||
Updated•23 years ago
|
Attachment #113457 -
Flags: approval1.3b?
Comment 6•23 years ago
|
||
Comment on attachment 113457 [details] [diff] [review]
Fix #define include guard
We're finished with 1.3beta. Is this something with lots of value and little
risk for the 1.3final "polish" cycle? I've moved the request to 1.3final.
Attachment #113457 -
Flags: approval1.3b? → approval1.3?
Attachment #113457 -
Flags: approval1.3? → approval1.3+
Comment 7•23 years ago
|
||
So, er... this got approval on 2003-02-10 12:31:57, wouldn't it be a good idea
to check this in?
| Assignee | ||
Comment 8•23 years ago
|
||
Checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•5 years ago
|
Component: String → XPCOM
You need to log in
before you can comment on or make changes to this bug.
Description
•