Bug 191749: bad define inside nsAFlatString.h. r=/sr=bzbarsky, a=dbaron